--- a/Seminar2_Metadata_management/OpenMetadata/03.Create_linage.ipynb
+++ b/Seminar2_Metadata_management/OpenMetadata/03.Create_linage.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:38:10.141741Z",
-     "start_time": "2024-12-17T15:38:07.094057Z"
+     "end_time": "2024-12-18T08:50:20.724704Z",
+     "start_time": "2024-12-18T08:50:16.983596Z"
     }
    },
    "source": [
@@ -28,13 +28,13 @@
     "from metadata.ingestion.ometa.ometa_api import OpenMetadata"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:38:10.198920Z",
-     "start_time": "2024-12-17T15:38:10.156800Z"
+     "end_time": "2024-12-18T08:50:22.225801Z",
+     "start_time": "2024-12-18T08:50:22.170083Z"
     }
    },
    "cell_type": "code",
@@ -51,13 +51,13 @@
    ],
    "id": "312d3163d5cf4ba5",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:38:11.088351Z",
-     "start_time": "2024-12-17T15:38:11.068362Z"
+     "end_time": "2024-12-18T08:50:24.063814Z",
+     "start_time": "2024-12-18T08:50:24.045194Z"
     }
    },
    "cell_type": "code",
@@ -73,18 +73,18 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:38:12.236434Z",
-     "start_time": "2024-12-17T15:38:12.228443Z"
+     "end_time": "2024-12-18T08:50:25.605992Z",
+     "start_time": "2024-12-18T08:50:25.591716Z"
     }
    },
    "cell_type": "code",
@@ -100,13 +100,13 @@
    ],
    "id": "cc52316e85b2c511",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:39:06.828055Z",
-     "start_time": "2024-12-17T15:39:06.820560Z"
+     "end_time": "2024-12-18T08:50:30.691710Z",
+     "start_time": "2024-12-18T08:50:30.678483Z"
     }
    },
    "cell_type": "code",
@@ -123,26 +123,26 @@
    ],
    "id": "7765cb45ce092219",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:39:07.435243Z",
-     "start_time": "2024-12-17T15:39:07.410442Z"
+     "end_time": "2024-12-18T08:50:36.165571Z",
+     "start_time": "2024-12-18T08:50:36.140197Z"
     }
    },
    "cell_type": "code",
    "source": "lineage_df = pd.read_csv(lineage_path)",
    "id": "dc2b824f374633ec",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:39:24.236466Z",
-     "start_time": "2024-12-17T15:39:24.225972Z"
+     "end_time": "2024-12-18T08:50:36.705157Z",
+     "start_time": "2024-12-18T08:50:36.684759Z"
     }
    },
    "cell_type": "code",
@@ -238,12 +238,262 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 1. Create a simple lineage\n",
+    "\n",
+    "The most simple lineage is just make a link between two tables(from source table to destination table)."
+   ],
+   "id": "a493648f70a79cc2"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-18T08:50:40.444463Z",
+     "start_time": "2024-12-18T08:50:40.432413Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def get_table_by_name(om_conn: OpenMetadata, table_fqn: str) -> Table:\n",
+    "    \"\"\"\n",
+    "    This function takes a table fqn, then returns a table entity\n",
+    "    :param om_conn: openmetadata connection\n",
+    "    :type om_conn: OpenMetadata\n",
+    "    :param table_fqn: table fully qualified name\n",
+    "    :type table_fqn: str\n",
+    "    :return:\n",
+    "    :rtype:\n",
+    "    \"\"\"\n",
+    "    return om_conn.get_by_name(entity=Table, fqn=table_fqn)"
+   ],
+   "id": "983e6d1640859db9",
+   "outputs": [],
    "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-18T08:54:36.250183Z",
+     "start_time": "2024-12-18T08:54:36.142141Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fr_communes_raw_fqn = f\"{schema_fqn}.fr_communes_raw\"\n",
+    "fr_communes_raw_om_entity = get_table_by_name(metadata,fr_communes_raw_fqn)\n",
+    "fr_communes_clean_fqn = f\"{schema_fqn}.fr_communes_clean\"\n",
+    "fr_communes_clean_om_entity = get_table_by_name(metadata,fr_communes_clean_fqn)\n"
+   ],
+   "id": "f09a932fcb27d8e1",
+   "outputs": [],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-18T08:54:37.502874Z",
+     "start_time": "2024-12-18T08:54:37.498494Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(fr_communes_raw_om_entity.id)\n",
+    "print(fr_communes_clean_om_entity.id)"
+   ],
+   "id": "f53f7253564bc3d0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__root__=UUID('f233a2ef-9022-4860-a43f-acedcae808dc')\n",
+      "__root__=UUID('aa41b05c-993d-4379-8e08-cc1b6b67332a')\n"
+     ]
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-18T08:57:21.270693Z",
+     "start_time": "2024-12-18T08:57:20.907Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "add_lineage_req1 = AddLineageRequest(\n",
+    "    edge=EntitiesEdge(\n",
+    "        description=\"## clean france communes dataset\",\n",
+    "        fromEntity=EntityReference(id=fr_communes_raw_om_entity.id, type=\"table\"),\n",
+    "        toEntity=EntityReference(id=fr_communes_clean_om_entity.id, type=\"table\"),\n",
+    "    ),\n",
+    ")\n",
+    "metadata.add_lineage(data=add_lineage_req1)"
+   ],
+   "id": "6165702539293e8a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'entity': {'id': 'f233a2ef-9022-4860-a43f-acedcae808dc',\n",
+       "  'type': 'table',\n",
+       "  'name': 'fr_communes_raw',\n",
+       "  'fullyQualifiedName': 'Constances-Geography.hospitals_in_france.Geography.fr_communes_raw',\n",
+       "  'description': 'This table contains all geographical information of french communes',\n",
+       "  'displayName': 'fr_communes_raw',\n",
+       "  'deleted': False,\n",
+       "  'href': 'http://datacatalog.casd.local/api/v1/tables/f233a2ef-9022-4860-a43f-acedcae808dc'},\n",
+       " 'nodes': [{'id': 'aa41b05c-993d-4379-8e08-cc1b6b67332a',\n",
+       "   'type': 'table',\n",
+       "   'name': 'fr_communes_clean',\n",
+       "   'fullyQualifiedName': 'Constances-Geography.hospitals_in_france.Geography.fr_communes_clean',\n",
+       "   'description': 'This table is built based on fr_communes_raw which is suitable for Contances related analysis',\n",
+       "   'displayName': 'fr_communes_clean',\n",
+       "   'deleted': False,\n",
+       "   'href': 'http://datacatalog.casd.local/api/v1/tables/aa41b05c-993d-4379-8e08-cc1b6b67332a'}],\n",
+       " 'upstreamEdges': [],\n",
+       " 'downstreamEdges': [{'fromEntity': 'f233a2ef-9022-4860-a43f-acedcae808dc',\n",
+       "   'toEntity': 'aa41b05c-993d-4379-8e08-cc1b6b67332a'}]}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 2. Create lineage with column details\n",
+    "\n",
+    "We have the table level lineage, if we need more information such as the column lineage and code, we need to add more details in the lineage"
+   ],
+   "id": "b8d5070947fdab57"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-18T09:17:44.449254Z",
+     "start_time": "2024-12-18T09:17:44.310339Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "column_lineage1 = ColumnLineage(\n",
+    "    fromColumns=[f\"{fr_communes_raw_fqn}.geometry\",\n",
+    "                 ],\n",
+    "    toColumn=f\"{fr_communes_clean_fqn}.geometry\",\n",
+    ")\n",
+    "\n",
+    "column_lineage2 = ColumnLineage(\n",
+    "    fromColumns=[f\"{fr_communes_raw_fqn}.nom\",\n",
+    "                 ],\n",
+    "    toColumn=f\"{fr_communes_clean_fqn}.name\",\n",
+    ")\n",
+    "\n",
+    "column_lineage3 = ColumnLineage(\n",
+    "    fromColumns=[f\"{fr_communes_raw_fqn}.insee\",\n",
+    "                 ],\n",
+    "    toColumn=f\"{fr_communes_clean_fqn}.insee\",\n",
+    ")\n",
+    "\n",
+    "query_detail=\"\"\"\n",
+    "Create TABLE fr_communes_clean AS\n",
+    "    SELECT fr_communes_raw.nom AS name,\n",
+    "           fr_communes_raw.geometry AS geometry,\n",
+    "           fr_communes_raw.insee AS insee,\n",
+    "    FROM fr_communes_raw;\n",
+    "\"\"\"\n",
+    "\n",
+    "lineage_details = LineageDetails(\n",
+    "    sqlQuery=query_detail,\n",
+    "    columnsLineage=[column_lineage1,column_lineage2,column_lineage3],\n",
+    ")\n",
+    "\n",
+    "add_lineage_req2 = AddLineageRequest(\n",
+    "    edge=EntitiesEdge(\n",
+    "        description=\"## clean france communes dataset\",\n",
+    "        fromEntity=EntityReference(id=fr_communes_raw_om_entity.id, type=\"table\"),\n",
+    "        toEntity=EntityReference(id=fr_communes_clean_om_entity.id, type=\"table\"),\n",
+    "        lineageDetails=lineage_details,\n",
+    "    ),\n",
+    ")\n",
+    "metadata.add_lineage(data=add_lineage_req2)\n"
+   ],
+   "id": "fe824eba5aa6bda2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'entity': {'id': 'f233a2ef-9022-4860-a43f-acedcae808dc',\n",
+       "  'type': 'table',\n",
+       "  'name': 'fr_communes_raw',\n",
+       "  'fullyQualifiedName': 'Constances-Geography.hospitals_in_france.Geography.fr_communes_raw',\n",
+       "  'description': 'This table contains all geographical information of french communes',\n",
+       "  'displayName': 'fr_communes_raw',\n",
+       "  'deleted': False,\n",
+       "  'href': 'http://datacatalog.casd.local/api/v1/tables/f233a2ef-9022-4860-a43f-acedcae808dc'},\n",
+       " 'nodes': [{'id': 'aa41b05c-993d-4379-8e08-cc1b6b67332a',\n",
+       "   'type': 'table',\n",
+       "   'name': 'fr_communes_clean',\n",
+       "   'fullyQualifiedName': 'Constances-Geography.hospitals_in_france.Geography.fr_communes_clean',\n",
+       "   'description': 'This table is built based on fr_communes_raw which is suitable for Contances related analysis',\n",
+       "   'displayName': 'fr_communes_clean',\n",
+       "   'deleted': False,\n",
+       "   'href': 'http://datacatalog.casd.local/api/v1/tables/aa41b05c-993d-4379-8e08-cc1b6b67332a'}],\n",
+       " 'upstreamEdges': [],\n",
+       " 'downstreamEdges': [{'fromEntity': 'f233a2ef-9022-4860-a43f-acedcae808dc',\n",
+       "   'toEntity': 'aa41b05c-993d-4379-8e08-cc1b6b67332a',\n",
+       "   'lineageDetails': {'sqlQuery': '\\nCreate TABLE fr_communes_clean AS\\n              SELECT fr_communes_raw.nom AS name,\\n             fr_communes_raw.geometry AS geometry,\\n             fr_communes_raw.insee AS insee,\\n             FROM fr_communes_raw;\\n',\n",
+       "    'columnsLineage': [{'fromColumns': ['Constances-Geography.hospitals_in_france.Geography.fr_communes_raw.geometry'],\n",
+       "      'toColumn': 'Constances-Geography.hospitals_in_france.Geography.fr_communes_clean.geometry'},\n",
+       "     {'fromColumns': ['Constances-Geography.hospitals_in_france.Geography.fr_communes_raw.nom'],\n",
+       "      'toColumn': 'Constances-Geography.hospitals_in_france.Geography.fr_communes_clean.name'},\n",
+       "     {'fromColumns': ['Constances-Geography.hospitals_in_france.Geography.fr_communes_raw.insee'],\n",
+       "      'toColumn': 'Constances-Geography.hospitals_in_france.Geography.fr_communes_clean.insee'}],\n",
+       "    'source': 'Manual'}}]}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 3. Add a workflow reference\n",
+    "\n",
+    "If the data transformation is done a `workflow automation tool`(e.g. airflow, etc.). We can as well ingest the `reference of the data pipeline` used to create the data lineage (e.g., the ETL feeding the tables) into OM.\n",
+    "\n",
+    "To prepare this example, we need to start by creating the Pipeline Entity. As usual, we have the entity hierarchy, a pipeline must be inside a pipeline service. So we'll need to prepare the Pipeline Service first."
+   ],
+   "id": "72fb7d8b55d22599"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "17dbae66cce5114d"
   },
   {
    "metadata": {},
@@ -285,20 +535,6 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "\n",
-    "def get_table_by_name(om_conn: OpenMetadata, table_fqn: str) -> Table:\n",
-    "    \"\"\"\n",
-    "    This function takes a table fqn, then returns a table entity\n",
-    "    :param om_conn: openmetadata connection\n",
-    "    :type om_conn: OpenMetadata\n",
-    "    :param table_fqn: table fully qualified name\n",
-    "    :type table_fqn: str\n",
-    "    :return: \n",
-    "    :rtype: \n",
-    "    \"\"\"\n",
-    "    return om_conn.get_by_name(entity=Table, fqn=table_fqn)\n",
-    "\n",
-    "\n",
     "def generate_pipeline_params(code_ref: str) -> Dict:\n",
     "    resu = None\n",
     "    if code_ref:\n",
@@ -306,7 +542,7 @@
     "        dag_description = \"this pipeline transform the snds raw data into constance simplyfy table\"\n",
     "        resu = {\"name\": dag_id,\n",
     "                \"description\": dag_description,\n",
-    "                \"air_url\": f\"https://meta-ingestion.casd.local/dags/{dag_id}/grid\",\n",
+    "                \"air_url\": f\"http://airflow.casd.local:8080/dags/{dag_id}/grid\",\n",
     "                \"pipeline_loc\": \"/opt/airflow/dags/airflow_metadata_extraction.py\"}\n",
     "    return resu\n",
     "\n",
@@ -386,10 +622,10 @@
     "    try:\n",
     "        dag_id = get_dag_info(dag_file)\n",
     "    except FileNotFoundError:\n",
-    "        logger.error(f'DAG file {dag_file} not found')\n",
+    "        print(f'DAG file {dag_file} not found')\n",
     "        raise\n",
     "    except ValueError:\n",
-    "        logger.error(f'DAG file {dag_file} has invalid format')\n",
+    "        print(f'DAG file {dag_file} has invalid format')\n",
     "        raise\n",
     "    pipeline_fqn = f\"{PIPELINE_SERVICE_NAME}.{dag_id}\"\n",
     "    # the type(pipeline_entity.id) returns\n",
@@ -397,7 +633,7 @@
     "    # so we can't store it in a dataframe\n",
     "    pipeline_entity = get_pipeline_entity_by_fqn(om_conn, pipeline_fqn)\n",
     "    if pipeline_entity:\n",
-    "        logger.info(f\"find the pipeline {pipeline_entity.id}\")\n",
+    "        print(f\"find the pipeline {pipeline_entity.id}\")\n",
     "        return pipeline_fqn\n",
     "    else:\n",
     "        raise ValueError(\n",
@@ -444,65 +680,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "from metadata.generated.schema.entity.data.table import Table\n",
-    "from metadata.generated.schema.api.lineage.addLineage import AddLineageRequest\n",
-    "from metadata.generated.schema.type.entityLineage import EntitiesEdge, LineageDetails\n",
-    "from metadata.generated.schema.type.entityReference import EntityReference\n",
-    "\n",
-    "\n",
-    "\n",
-    "def get_table_by_name(om_conn,table_fqn:str):\n",
-    "    return om_conn.get_by_name(entity=Table, fqn=table_fqn)\n",
-    "\n",
-    "for row in source_dest_tabs:\n",
-    "    source_tab_name=row[source_tab_col_name]\n",
-    "    dest_tab_name=row[dest_tab_col_name]\n",
-    "    source_tab_fqn=f\"{schema_fqn}.{source_tab_name}\"\n",
-    "    dest_tab_fqn=f\"{schema_fqn}.{dest_tab_name}\"\n",
-    "    source_tab_entity = get_table_by_name(metadata, source_tab_fqn)\n",
-    "    dest_tab_entity = get_table_by_name(metadata, dest_tab_fqn)\n",
-    "    # test if table exist or not\n",
-    "    # if not exist, throw error\n",
-    "    if source_tab_entity:\n",
-    "        print(source_tab_entity.id)\n",
-    "    else:\n",
-    "        print(f\"can't find table {source_tab_name} in schema {schema_name}\")\n",
-    "    if dest_tab_entity:\n",
-    "        print(dest_tab_entity.id)\n",
-    "    else:\n",
-    "        print(f\"can't find table {dest_tab_name} in schema {schema_name}\")\n",
-    "    # if exists, for each pair create a new add lineage request\n",
-    "    # filter lineage df to keep only rows of the given source, dest tab pair\n",
-    "    filtered_lineage_df=lineage_df[(lineage_df[source_tab_col_name]==source_tab_name) & (lineage_df[dest_tab_col_name]==dest_tab_name)]\n",
-    "    # first create a lineage detail, it requires:\n",
-    "    # - a query detail (string)\n",
-    "    # - a column lineage list ([ColumnLineage]) optional\n",
-    "    # - a pipeline (pipeline entity) optional\n",
-    "    colum_lineage=build_column_lineage(filtered_lineage_df,source_tab_fqn,dest_tab_fqn)\n",
-    "    pipeline_fqn = get_df_pipeline_fqn(filtered_lineage_df)\n",
-    "\n",
-    "    # if it has a code ref, parse the code ref to get the code detail\n",
-    "    # then create a lineage detail entity\n",
-    "    if pipeline_fqn:\n",
-    "        # get pipeline entity\n",
-    "        pipeline_entity = get_pipeline_by_fqn(pipeline_fqn[0])\n",
-    "        query_detail=get_query_detail(pipeline_fqn[0])\n",
-    "        lineage_details = LineageDetails(\n",
-    "        sqlQuery=query_detail,\n",
-    "        columnsLineage=colum_lineage,\n",
-    "        pipeline=EntityReference(id=pipeline_entity.id, type=\"pipeline\"),)\n",
-    "    else:\n",
-    "        lineage_details=None\n",
-    "    add_pipeline_lineage_request = AddLineageRequest(\n",
-    "    edge=EntitiesEdge(\n",
-    "        fromEntity=EntityReference(id=source_tab_entity.id, type=\"table\"),\n",
-    "        toEntity=EntityReference(id=dest_tab_entity.id, type=\"table\"),\n",
-    "        lineageDetails=lineage_details,\n",
-    "    ),)\n",
-    "\n",
-    "    pipeline_lineage1 = metadata.add_lineage(data=add_pipeline_lineage_request)"
-   ],
+   "source": "",
    "id": "7fc558560f96e504"
   }
  ],
