--- a/Seminar1_GeoSpatial_data_storage_and_calculation/sedona_geoparquet/notebooks/03.Real_world_problems.ipynb
+++ b/Seminar1_GeoSpatial_data_storage_and_calculation/sedona_geoparquet/notebooks/03.Real_world_problems.ipynb
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T13:25:46.699586Z",
-     "start_time": "2024-12-10T13:25:44.464936Z"
+     "end_time": "2025-01-06T14:10:59.627616Z",
+     "start_time": "2025-01-06T14:10:57.932165Z"
     }
    },
    "cell_type": "code",
@@ -37,8 +37,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T13:25:47.943189Z",
-     "start_time": "2024-12-10T13:25:47.932015Z"
+     "end_time": "2025-01-06T14:11:00.663697Z",
+     "start_time": "2025-01-06T14:11:00.658742Z"
     }
    },
    "cell_type": "code",
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PLIU\\Documents\\git\\ConstanceDataPlatform\n"
+      "/home/pliu/git/ConstanceDataPlatform\n"
      ]
     }
    ],
@@ -62,8 +62,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T13:25:48.782396Z",
-     "start_time": "2024-12-10T13:25:48.771358Z"
+     "end_time": "2025-01-06T14:11:02.295661Z",
+     "start_time": "2025-01-06T14:11:02.286433Z"
     }
    },
    "cell_type": "code",
@@ -88,8 +88,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T13:26:23.406620Z",
-     "start_time": "2024-12-10T13:25:51.387384Z"
+     "end_time": "2025-01-06T14:11:13.677198Z",
+     "start_time": "2025-01-06T14:11:03.921299Z"
     }
    },
    "cell_type": "code",
@@ -106,7 +106,19 @@
     "    getOrCreate()"
    ],
    "id": "38f6e9ea4816a222",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/01/06 15:11:06 WARN Utils: Your hostname, pliu-ubuntu24 resolves to a loopback address: 127.0.1.1; using 192.168.30.128 instead (on interface ens33)\n",
+      "25/01/06 15:11:06 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/01/06 15:11:07 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "execution_count": 4
   },
   {
