--- a/Seminar1_GeoSpatial_data_storage_and_calculation/sedona_geoparquet/notebooks/03.Real_world_problems.ipynb
+++ b/Seminar1_GeoSpatial_data_storage_and_calculation/sedona_geoparquet/notebooks/03.Real_world_problems.ipynb
@@ -1355,7 +1355,13 @@
    "source": [
     "## 4 Count hospitals in each commune in Île-de-France\n",
     "\n",
-    "For the sake of simplicity, here we only choose commune in a radius of 8000 meters of the paris center."
+    "For the sake of simplicity, here we only choose commune in a radius of 8000 meters of the paris center.\n",
+    "\n",
+    "1. Get the centroid of Paris\n",
+    "2. Get all commune in a Radius of 8000 meters from the centroid of Paris\n",
+    "3. Spatial Join(ST_Contains) the hospital data frame with the commune data frame\n",
+    "4. Group by the commune and count the hospital numbers\n",
+    "5. Generate a map to visualize the results"
    ],
    "id": "83c905200168f214"
   },
@@ -1445,6 +1451,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# We get 30 communes in the raius of 8000 meters\n",
     "print(f\"total commune count: {filtered_commune_df.count()}\")\n",
     "filtered_commune_df.show()"
    ],
