--- a/Seminar1_GeoSpatial_data_storage_and_calculation/sedona_geoparquet/notebooks/03.Real_world_problems.ipynb
+++ b/Seminar1_GeoSpatial_data_storage_and_calculation/sedona_geoparquet/notebooks/03.Real_world_problems.ipynb
@@ -1353,9 +1353,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 4 Count hospitals in each commune in Île-de-France\n",
+    "## Q4. Count hospitals in each commune in Île-de-France\n",
     "\n",
-    "For the sake of simplicity, here we only choose commune in a radius of 8000 meters of the paris center.\n",
+    "For the sake of simplicity, here we only choose the districts(communes) in a radius of 8000 meters of the paris center.\n",
     "\n",
     "1. Get the centroid of Paris\n",
     "2. Get all commune in a Radius of 8000 meters from the centroid of Paris\n",
